# Task-For-Unreal-Engine

./: CMakeLists.txt  README.md
src/: DictionaryWidget.cpp  DictionaryWidget.h  dictionary.cpp  dictionary.h  main.cpp
